--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <input id="input" type="text" placeholder="Digite aqui...">
         </div>
     </main>
+    <footer class="rodape">
+        <h1>&copy; 2023 by Guilherme Mattos Conde</h1>
+        <h2><a href="mailto:guimattos205@gmail.com" target="blank">Gmail</a> | <a href="https://github.com/guilherme-mattos-conde" target="blank">GitHub</a> | <a href="https://www.linkedin.com/in/guilherme-mattos-conde/" target="blank">Linkedin</a></h2>
+    </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
